<resources>
    <string name="app_name">Forecast</string>
    <string name="change_city">Сменить город</string>
    <string name="current_location">Мое местоположение</string>
    <string name="wind">Ветер</string>
    <string name="humidity">Влажность</string>
    <string name="pressure">Давление</string>
    <string name="rain_chance">Уровень осадков</string>
    <string name="content_desc_weather_icon">Иконка погоды</string>
    <string name="celsius">C</string>
    <string name="fahrenheit">F</string>
    <string name="degree">º</string>
    <string name="error_empty_weather_response_body">Не удалось получить текущую погоду</string>
    <string name="error_empty_city_response_body">Не удалось получить список городов</string>
    <string name="wind_direction_n">С</string>
    <string name="wind_direction_ne">СВ</string>
    <string name="wind_direction_e">В</string>
    <string name="wind_direction_se">ЮВ</string>
    <string name="wind_direction_s">Ю</string>
    <string name="wind_direction_sw">ЮЗ</string>
    <string name="wind_direction_w">З</string>
    <string name="wind_direction_nw">СЗ</string>
    <string name="wind_direction_none">штиль</string>
    <string name="unknown_value">\?</string>
    <string name="pressure_metric">мм рт.ст.</string>
    <string name="wind_speed_metric">м/с</string>
    <string name="percent">%</string>
    <string name="rainfall_level">мм</string>
    <string name="error_no_location_permission">Нет прав на чтение местоположения</string>
    <string name="wind_speed_imperial">миль/ч</string>
    <string name="pressure_imperial">дюйм рт. ст</string>
    <string name="rainfall_metric">мм/ч</string>
    <string name="rainfall_imperial">дюйм/ч</string>
    <string name="search_city_title">Введите название населенного пункта или почтовый индекс</string>

</resources>
