<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.tadiuzzz.forecast.feature.current.CurrentWeatherViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColorMain"
        android:padding="@dimen/doubleMinPadding"
        tools:context=".feature.current.CurrentWeatherFragment">

        <TextView
            android:id="@+id/tv_city"
            style="@style/TextCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.onChangeCityClick()}"
            android:text="@{viewmodel.currentWeather.city}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Краснодар" />

        <TextView
            android:id="@+id/tv_switcher_title"
            style="@style/TextAdditional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree"
            android:layout_marginRight="@dimen/minPadding"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            app:layout_constraintEnd_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/radioGroup" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="@dimen/doubleMinPadding"
            android:background="@drawable/temp_switcher_outline"
            android:checkedButton="@{viewmodel.isMetricUnits() ? @id/rb_celsius : @id/rb_fahrenheit}"
            android:orientation="horizontal"
            tools:checkedButton="@id/rb_celsius"
            app:layout_constraintBottom_toTopOf="@+id/tv_current_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:id="@+id/rb_celsius"
                style="@style/TextMain"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/temp_switcher_selector_left"
                android:button="@null"
                android:onClick="@{() -> viewmodel.onTempSwitcherClick()}"
                android:gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:textColor="@drawable/temp_switcher_text_selector"
                android:text="@string/celsius"
                app:textStyle='@{viewmodel.isMetricUnits() ? "bold" : "normal"}'
                />

            <RadioButton
                android:id="@+id/rb_fahrenheit"
                style="@style/TextMain"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/temp_switcher_selector_right"
                android:button="@null"
                android:onClick="@{() -> viewmodel.onTempSwitcherClick()}"
                android:buttonTint="@color/textColorMain"
                android:gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:textColor="@drawable/temp_switcher_text_selector"
                android:text="@string/fahrenheit"
                app:textStyle='@{viewmodel.isMetricUnits() ? "normal" : "bold"}'
                />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_change_city"
            style="@style/TextAdditional"
            android:textColor="@drawable/button_text_selector"
            android:onClick="@{() -> viewmodel.onChangeCityClick()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/doubleMinPadding"
            android:text="@string/change_city"
            app:layout_constraintStart_toStartOf="@+id/tv_city"
            app:layout_constraintTop_toBottomOf="@+id/tv_city" />

        <TextView
            android:id="@+id/tv_current_location"
            style="@style/TextAdditional"
            android:textColor="@drawable/button_text_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="@dimen/minPadding"
            android:text="@string/current_location"
            android:onClick="@{() -> viewmodel.onMyLocationClick()}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_change_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_change_city"
            app:layout_constraintTop_toTopOf="@+id/tv_change_city" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_center_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/iv_weather_icon"
            android:layout_width="@dimen/weather_icon_size"
            android:layout_height="@dimen/weather_icon_size"
            android:scaleType="fitCenter"
            android:layout_marginRight="@dimen/minPadding"
            app:layout_constraintBottom_toTopOf="@+id/tv_wind_label"
            app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_change_city"
            app:weatherIcon="@{viewmodel.currentWeather.icon}"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/content_desc_weather_icon" />

        <TextView
            android:id="@+id/tv_temperature"
            style="@style/TextTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/minPadding"
            android:textScaleX="0.8"
            android:text='@{viewmodel.currentWeather.temp}'
            app:layout_constraintBottom_toTopOf="@+id/tv_pressure_label"
            app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_location"
            tools:text="20º" />

        <TextView
            android:id="@+id/tv_weather_type"
            style="@style/TextMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/minPadding"
            android:layout_marginTop="@dimen/minPadding"
            android:text='@{viewmodel.currentWeather.description}'
            app:layout_constraintBottom_toTopOf="@+id/tv_pressure_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_weather_icon"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Облачно" />

        <TextView
            android:id="@+id/tv_wind_label"
            style="@style/TextAdditional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:layout_marginBottom="@dimen/minPadding"
            app:layout_constraintBottom_toTopOf="@+id/tv_wind_value"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_wind_value"
            style="@style/TextMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{viewmodel.currentWeather.wind}'
            android:layout_marginBottom="@dimen/doubleMinPadding"
            app:layout_constraintBottom_toTopOf="@+id/tv_humidity_label"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="10 м/с, Западный" />

        <TextView
            android:id="@+id/tv_humidity_label"
            style="@style/TextAdditional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/minPadding"
            android:text="@string/humidity"
            app:layout_constraintBottom_toTopOf="@+id/tv_humidity_value"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_humidity_value"
            style="@style/TextMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{viewmodel.currentWeather.humidity}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="60%" />

        <TextView
            android:id="@+id/tv_pressure_label"
            style="@style/TextAdditional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/minPadding"
            android:text="@string/pressure"
            app:layout_constraintBottom_toTopOf="@+id/tv_pressure_value"
            app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline" />

        <TextView
            android:id="@+id/tv_pressure_value"
            style="@style/TextMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{viewmodel.currentWeather.pressure}'
            android:layout_marginBottom="@dimen/doubleMinPadding"
            app:layout_constraintBottom_toTopOf="@+id/tv_rain_chance_label"
            app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
            tools:text="752 мм рт. ст" />

        <TextView
            android:id="@+id/tv_rain_chance_label"
            style="@style/TextAdditional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/minPadding"
            android:text="@string/rain_chance"
            app:layout_constraintBottom_toTopOf="@+id/tv_rain_chance_value"
            app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline" />

        <TextView
            android:id="@+id/tv_rain_chance_value"
            style="@style/TextMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.currentWeather.rainfallLevel}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
            tools:text="10%" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>